welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: type mismatch;
 found   : Unit
 required: Array[java.awt.Color]
  for(i <- 0 to tab.length-1)
        ^